# Coffee-Engine-CICD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build-test.yml  publish-docs.yml
CoffeeEditor/: CMakeLists.txt  imgui.ini
CoffeeEditor/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  ImportPanel.cpp  ImportPanel.h  MonitorPanel.cpp  MonitorPanel.h  OutputPanel.cpp  OutputPanel.h  Panel.h  SceneTreePanel.cpp  SceneTreePanel.h
CoffeeEngine/: CMakeLists.txt
CoffeeEngine/src/: Coffee.h
CoffeeEngine/src/CoffeeEngine/: PrimitiveMesh.cpp  PrimitiveMesh.h
CoffeeEngine/src/CoffeeEngine/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  FileDialog.cpp  FileDialog.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Stopwatch.cpp  Stopwatch.h  SystemInfo.cpp  SystemInfo.h  Timer.cpp  Timer.h  UUID.cpp  UUID.h  Window.cpp  Window.h
CoffeeEngine/src/CoffeeEngine/Core/DataStructures/: CircularBuffer.h  Octree.cpp  Octree.h
CoffeeEngine/src/CoffeeEngine/Embedded/: DebugLineShader.inl  FinalPassShader.inl  MissingShader.inl  StandardShader.inl  ToneMappingShader.inl
CoffeeEngine/src/CoffeeEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
CoffeeEngine/src/CoffeeEngine/IO/: CacheManager.cpp  CacheManager.h  Resource.h  ResourceFormat.h  ResourceImporter.cpp  ResourceImporter.h  ResourceLoader.cpp  ResourceLoader.h  ResourceRegistry.cpp  ResourceRegistry.h  ResourceSaver.cpp  ResourceSaver.h  ResourceUtils.h
CoffeeEngine/src/CoffeeEngine/IO/Serialization/: FilesystemPathSerialization.h  GLMSerialization.h
CoffeeEngine/src/CoffeeEngine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
CoffeeEngine/src/CoffeeEngine/Math/: BoundingBox.h  Frustrum.h  Frustum.h
CoffeeEngine/src/CoffeeEngine/Project/: Project.cpp  Project.h
CoffeeEngine/src/CoffeeEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  DebugRenderer.cpp  DebugRenderer.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
CoffeeEngine/src/CoffeeEngine/Scene/: Components.h  Entity.cpp  Entity.h  PrimitiveMesh.cpp  PrimitiveMesh.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneTree.cpp  SceneTree.h
CoffeeEngine/src/CoffeeEngine/Scripting/: IScriptingBackend.h  Script.cpp  Script.h  ScriptManager.cpp  ScriptManager.h  ScriptManager.hpp
CoffeeEngine/src/CoffeeEngine/Scripting/CSharp/: CSharpBackend.cpp  CSharpBackend.h
CoffeeEngine/src/CoffeeEngine/Scripting/Lua/: LuaBackend.cpp  LuaBackend.h  lua_stub.lua
CoffeeEngine/src/Platform/Linux/: LinuxSystemInfo.cpp  LinuxSystemInfo.h
CoffeeEngine/src/Platform/Windows/: WindowsSystemInfo.cpp  WindowsSystemInfo.h
Resources/: logo-wip.png~
Sandbox/: CMakeLists.txt
TeaEditor/: CMakeLists.txt
TeaEngine/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
(+47 files in other folders)
